[package]
name = "findind-nemo"
version = "0.1.0"
authors = ["Juan Jose Barrera <barrerajuanjose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0.104"
rocket_contrib = "0.4.4"

[target.heroku]
version = "nightly"