[package]
name = "finding-nemo"
version = "0.1.1"
authors = ["Juan Jose Barrera <barrerajuanjose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.104"
url = "1.7.2"
futures-util = "0.3.5"
reqwest = { version = "0.10.4", features = ["json", "blocking"] }